testsuite/tests/dependent/should_fail/BadTelescope4.stderr
BadTelescope4.hs:9:1: error: [GHC-87279]
    • The kind of ‘Bad’ is ill-scoped
        Inferred kind: Bad :: forall {k} (b :: Proxy a).
                              forall (a :: k) ->
                              Proxy b -> forall (d :: Proxy a) -> SameKind b d -> *
      Note: Inferred variables (namely: k)
            always come first
            then specified variables (namely: (b :: Proxy a)).
      Perhaps try this order instead:
        k
        (a :: k)
        (b :: Proxy a)
        (c :: Proxy b)
        (d :: Proxy a)
        (x :: SameKind b d)
    • In the data type declaration for ‘Bad’

